VR: Show keyboard when cancelling audio permission prompt

Also make the spacer in the suggestions layout non-focusable so it doesn't
steal focus from the omnibox and hide the keyboard.

Bug: 801402, 801634
Change-Id: Ia7b09b66e7f98ddc89ede4f67a4ad02544079553